<resources>
    <string name="app_name">NewApplication</string>
    <string name="menu_fragment">Menu fragment</string>
    <string name="play_button">Let\'s play!</string>
    <string name="menu_title">Menu title</string>
    <string name="shop_button">Shop</string>
    <string name="rules_button">Rules</string>
    <string name="rules_title">Rules</string>
    <string name="rules_text">Here must be rules, but they aren\'t implemented…</string>
    <string name="leave_rules_button">Leave rules</string>
    <string name="game_title">Good luck!</string>
    <string name="number_button_1">1</string>
    <string name="number_button_2">2</string>
    <string name="number_button_3">3</string>
    <string name="number_button_4">4</string>
    <string name="number_button_5">5</string>
    <string name="number_button_6">6</string>
    <string name="number_button_7">7</string>
    <string name="number_button_8">8</string>
    <string name="number_button_9">9</string>
    <string name="number_button_0">0</string>
    <string name="clear_all_button">CA</string>
    <string name="submit_button">Try</string>
    <string name="clear_one_button">C</string>
    <string name="game_text_write">Write number from 0 to 100:</string>
    <string name="user_balance">Your balance: %d</string>
    <string name="leave_game_button">Leave game</string>
    <string name="user_input"><u>%s</u></string>
    <string name="TEST_user_input"><u>18749</u></string>
    <string name="game_text_wait">Processing your data…</string>
    <string name="try_to_guess_exact">Exact! Your number(%d) equals to (%d). Your won: %d!</string>
    <string name="try_to_guess_close">You was close. Your: %d. Guessed %d. Your won: %d.</string>
    <string name="try_to_guess_near">You was near. Your: %d. Guessed %d. Your won: %d.</string>
    <string name="try_to_guess_barely">You barely won. Your: %d. Guessed %d. Your won: %d…</string>
    <string name="try_to_guess_not">You didn\'t win. Your: %d. Guessed %d. Your won: %d…</string>
    <string name="leave_shop_button">Leave shop</string>
    <string name="shop_title">Shop</string>
    <string name="buttons_color_description">Buttons color (1000):</string>
    <string name="buttons_color_text">o</string>
    <string name="luck_boost_text">Luck boost (%d/100)</string>
    <string name="win_boost_text">Win boost (%d/100)</string>
    <string name="buy_button_text">Buy</string>
</resources>