<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/text_background"
        android:textSize="25sp"
        android:text="@string/game_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/leaveGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_game_button"
        app:layout_constraintBottom_toTopOf="@+id/userBalance"
        app:layout_constraintEnd_toStartOf="@+id/gameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/text_background"
        tools:text="Balance: 5713958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    <TextView
        android:id="@+id/gameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/text_background"
        android:text="@string/game_text_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userBalance" />

    <TextView
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/text_background"
        tools:text="@string/TEST_user_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameText" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_1" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_2" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_4" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_5" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_7" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_8" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearAllButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/clear_all_button" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/numberButton0"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/number_button_0" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearOneButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/clear_one_button" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tryButton"
            android:layout_columnWeight="1"
            android:layout_columnSpan="3"
            android:layout_height="50dp"
            android:text="@string/submit_button" />
    </GridLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getSomeCoins"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:text= ""
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>