<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_background" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/leaveShopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/leave_shop_button"
        app:layout_constraintBottom_toBottomOf="@+id/shopTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shopTitle" />

    <TextView
        android:id="@+id/shopTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/text_background"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:text="@string/shop_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/not_enough_coins_anim"
        tools:text="Balance: 130183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaveShopButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsColorContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/buttons_color_bg"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userBalance">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textColor="@color/shop_text_color"
            android:text="@string/buttons_color_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/defaultButtonsColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/buttons_color_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/redButtonsColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="#F00"
                android:text="@string/buttons_color_text"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/greenButtonsColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="#0F0"
                android:text="@string/buttons_color_text"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/blueButtonsColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="#00F"
                android:text="@string/buttons_color_text"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/luckBoostContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/buttons_color_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsColorContainer">

        <TextView
            android:id="@+id/luckBoostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textColor="@color/shop_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Luck boost (12/100)" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/luckBoostButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/buy_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/winBoostContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/buttons_color_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/luckBoostContainer">

        <TextView
            android:id="@+id/winBoostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textColor="@color/shop_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Win boost (46/100)" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/winBoostButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/buy_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>